[package]
name = "pv_cobra_redux"
description = "Rust interface to Picovoice Cobra"
version = "0.1.0"
edition = "2024"
keywords = ["voice", "activity", "detection", "ffi", "vad"]
readme = "README.md"
documentation = "https://docs.rs/pv_cobra_redux"
license = "MIT"
repository = "https://github.com/ysimonson/pv_cobra_redux"

[dev-dependencies]
cpal = "0.15.3"
samplerate = "0.2.4"
anyhow = "^1.0.94"
clap = { version = "4.5.23", features = ["derive"] }
indicatif = "0.18.0"

[build-dependencies]
bindgen = "0.71.0"
